# fastauth

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.Docker.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci-cd.yml
.zed/: settings.json
alembic/: alembic.ini.mako  env.py
alembic/versions/: 20260412_143625_init.py
fastauth/: main.py
fastauth/common/: exceptions.py  settings.py
fastauth/db/: __init__.py  database.py  repository.py
fastauth/models/: __init__.py  schemas.py  token.py  user.py
fastauth/routers/: __init__.py  auth.py  google_auth.py
fastauth/services/: auth.py  oauth2.py
scripts/: bump_version.py
tests/: conftest.py  test_auth.py  test_main.py  test_repository.py
