[project]
name = "fastauth"
version = "0.5.0"
description = "Fastauth is a api's microservice for authentification with asyncronous postgres database. All in one docker-compose file. It got a /register, /login, /logout, /refresh, /me endpoints. Working with jwt tokens. You can also connect with google oauth."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "authlib>=1.5.1",
    "fastapi[standard]>=0.115.11",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.23",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "factory-boy>=3.3.3",
    "faker>=37.0.0",
    "httpx>=0.28.0",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "ty>=0.0.24",
]

# ===============
# pytest
# ===============

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["-v", "-s"]
testpaths = ["tests"]
asyncio_mode = "auto"

# ===============
# ruff
# ===============

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N"]
ignore = ["D100", "D104", "N818"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = []

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true

docstring-code-line-length = "dynamic"
